# Sep4IotDevice

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  IoT Class Diagram v0.1.asta  README.md  Sep4IotDevice.atsln  Sep4IotDevice.componentinfo.xml  Sep4IotDevice.cproj  TODO.txt  _lo_ra_w_a_n_handler_8h_source.html  actuation_8h.html  actuation_8h_source.html  annotated.html  classes.html  co2_8h.html  co2_8h_source.html  co2__handler_8h.html  co2__handler_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  error_8h.html  error_8h_source.html  error__handler_8h.html  error__handler_8h_source.html  files.html  globals.html  globals_func.html  globals_type.html  handler__controller_8h_source.html  humidity_8h.html  humidity_8h_source.html  humidity__handler_8h.html  humidity__handler_8h_source.html  index.html  lorawan__handler_8h_source.html  menudata.js  platformio.ini  structactuation__handler-members.html  structactuation__handler.html  (+23 more)
.github/workflows/: Doxygen.yml  cmake.yml  main.yml  platformio.yml
docs/: IoT Class Diagram v0.1.1.asta  IoT Class Diagram v0.1.2.asta  IoT Class Diagram v0.1.3.asta  IoT Class Diagram v0.1.4.asta  IoT Class Diagram v0.1.5.asta  IoT Class Diagram v0.1.6.asta  IoT Class Diagram v0.1.7.asta  IoT Class Diagram v1.2.0.asta
include/: LoRaWANHandler.h  actuation.h  co2.h  co2_handler.h  error.h  error_handler.h  handler_controller.h  handlers.h  humidity.h  humidity_handler.h  lorawan_handler.h  taskConfig.h  temperature.h  temperature_handler.h  utils.h
include/private/: p_error.h
scripts/: init_lora.sh
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  classes_1.js  classes_4.js  files_0.js  files_1.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  typedefs_4.js
src/: LoRaWANHandler.c  actuation.c  co2.c  co2_handler.c  error.c  error_handler.c  handler_controller.c  handlers.c  humidity.c  humidity_handler.c  lorawan_handler.c  main.c  taskConfig.h  temperature.c  temperature_handler.c  utils.c
src/co2/: co2.c  co2.h
src/temperature/: temperature.c  temperature.h
tests/: CMakeLists.txt  actuation.cpp  error.cpp  fakes.c  fakes.h  test_co2.cpp  test_co2_handler.cpp  test_error_handler.cpp  test_handler_controller.cpp  test_humidity.cpp  test_humidity_handler.cpp  test_lorawan_handler.cpp  test_temperature.cpp  test_temperature_handler.cpp  utils.cpp
tests/Controls/: LoRaWANHandler.h  actuation.h  co2.h  co2_handler.h  error.h  error_handler.h  handler_controller.h  humidity.h  humidity_handler.h  lorawan_handler.h  temperature.h  temperature_handler.h
tests/Drivers/: avr_io.h  display_7seg.h  hih8120.h  lora_driver.h  mh_z19.cpp  mh_z19.h  rc_servo.h  serial.h  status_leds.h  stdio_driver.h
tests/FreeRTOS/: ATMEGA_FreeRTOS.h  FreeRTOSConfig.h  message_buffer.h  queue.h  semphr.h  task.cpp  task.h
